# cargo-minver

./: Cargo.toml  NOTES.md  README.md  build.rs  rustfmt.toml
src/: driver.rs  feature.rs  ipc.rs  lib.rs  main.rs  visitor.rs
src/wrapper/: ast.rs  hir.rs  mod.rs
tests/: lang_features.rs
tests/lang_features/: crate_in_paths.rs  dotdot_in_tuple_patterns.rs  dotdoteq_in_patterns.rs
tests/lang_files/: abi_sysv64.rs  associated_consts.rs  async_await.rs  augmented_assignments.rs  bind_by_move_pattern_guards.rs  braced_empty_structs.rs  cfg_attr_multi.rs  cfg_doctest.rs  cfg_target_feature.rs  cfg_target_vendor.rs  conservative_impl_trait.rs  const_constructor.rs  const_indexing.rs  crate_in_paths.rs  deprecated.rs  dyn_trait.rs  extern_crate_self.rs  field_init_shorthand.rs  fn_must_use.rs  generic_param_attrs.rs  i128_type.rs  if_while_or_patterns.rs  impl_header_lifetime_elision.rs  inclusive_range_syntax.rs  irrefutable_let_patterns.rs  loop_break_value.rs  match_default_bindings.rs  min_const_fn.rs  min_const_unsafe_fn.rs  min_slice_patterns.rs  more_struct_aliases.rs  no_std.rs  non_exhaustive.rs  panic_handler.rs  param_attrs.rs  pattern_parentheses.rs  pub_restricted.rs  question_mark.rs  raw_identifiers.rs  relaxed_adts.rs  (+21 more)
tests/util/: mod.rs  project.rs
