[package]
name = "cargo-minver"
version = "0.0.0"
authors = ["Eduardo Broto <ebroto@tutanota.com>"]
edition = "2018"
description = "WIP"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
semver = { version = "0.9", features = ["serde"] }
structopt = "0.3"

[dev-dependencies]
tempfile = "3.1"

[lib]
test = false
doctest = false

[[bin]]
name = "cargo-minver"
path = "src/bin/minver/main.rs"
test = false

[[bin]]
name = "minver-wrapper"
path = "src/bin/wrapper/main.rs"
test = false
